@@ -333,7 +333,9 @@
           <td tal:define="field python:here.getField('hideCssClassesTo')">
             <span metal:use-macro="here/widgets/field/macros/view" />
           </td>
-          <td></td>
+          <td tal:define="field python:here.getField('enableItemDuplication')">
+            <span metal:use-macro="here/widgets/field/macros/view" />
+          </td>
         </tr>
       </table>
 
